--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 
 <body>
+    <header id="title"><title>How YOU are contributing to </title></header>
     <div id="production-pie-chart"></div>
     <div id="yield-bar-chart"></div>
     <div id="harvest-treemap"></div>
+    <div id="deforestation-map"></div>
+    <div id="myDiv"></div>
     <script src="script.js"></script>
 </body>
 </html>
