--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
 </head>
 
 <body>
-    <header id="title"> <title>How YOU are contributing to </title></header>
-    <section id="intro"> <!-- flexbox wrapper/container-->
+    <header>
+        <header id="title"> 
+            <h1>How this  Approximately 61.5% of original orangutan habitats will be destroyed by 2025. 
+
+            </h1>
+        </header>
+    </header>
+
+    <section id="">
         <article  id="production-pie-chart"></article>
         <article id="introText">
-            <h1>asdfasd</h1>
+            <h1>Approximately 61.5% of original orangutan habitats will be destroyed by 2025.</h1>
         
         
         </article>
 
 
     </section>
+
+
+
     <div id="yield-bar-chart"></div>
     <div id="harvest-treemap"></div>
     <div id="deforestation-map"></div>
