--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
        
 
 
-        <section class="card">
+        <section class="cardCol">
 
             Introducing Palm Oil:
             To understand the main driver of habitat loss, we have to look at the palm oil industry. Despite the
