--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                 endangered
                 with habitat loss being the leading cause. Though there are conservation and protected areas, illegal
                 plantations have forced more than 50% of the orangutan population into unprotected forest where they
-                become vulnerable to poachers. Aside from dealing with habitat loss, low reproductive rates amongst
+                become vulnerable to poachers.
+
+                <br><br>
+                Aside from dealing with habitat loss, low reproductive rates amongst
                 orangutans make their populations highly vulnerable. As females only give birth to one infant at a time
                 every seven to nine years, each female will only be able to bear four to five babies over a lifetime.
                 Therefore, making it harder for the species to recover from population declines.
@@ -69,78 +72,168 @@
 
     <aside class="fun-fact">
 
-        <h2> Did you know?<br> <a
-                href=https://www.nih.gov/news-events/nih-research-matters/orangutan-genome-sequenced>Orangutans and
-                humans share 97% of their DNA</a></h2>
+        <h2> To understand the main driver of habitat loss, we have to look at the palm oil industry. Despite the
+            environmental devastation palm oil production in southeast asia has garnered extensive media coverage in the
+            past, it has yet to deter the rapid growth of the industry, consequently it has not decreased deforestation
+            for the purpose of palm oil production.</h2>
     </aside>
 
     <section class="background tint" id="palmOilIntro">
 
 
+
         <section class="cardCol">
+            <h2>So why has the palm oil industry thrived in the past decade?</h2>
+            <p>
+                Surprisingly, half of the world's population rely on palm oil as a part of their diet. Thus, as the
+                global
+                population grows, so will the demand for palm oil. Furthermore, many companies globally are not legally
+                required to label palm oil as an ingredient. Instead, it is often labelled under other terms such as
+                ‘vegetable oil’ or ‘vegetable fat’, causing a lot of consumers to be unaware of how frequently they are
+                purchasing products with palm oil.
+            </p>
 
-            <h2>Introducing Palm Oil:</h2>
-            <p>To understand the main driver of habitat loss, we have to look at the palm oil industry. Despite the
-                environmental devastation palm oil production in southeast asia has garnered extensive media coverage in
-                the
-                past, it has yet to deter the rapid growth of the industry, consequently it has not decreased
-                deforestation
-                for the purpose of palm oil production.</p>
+            <h3 style="margin-top: 10px"> <!--small edit so I didn't make a class or use css selector-->
+                To put the growth of palm oil production into perspective, in 1970, the world produced 2 million tonnes
+                of
+                palm oil. By
+                2020, half a century later, 75.88 million tonnes of palm oil was produced.</h3>
+            <h2>This represents an increase of
+                36.9 times the
+                amount recorded in 1970.
+            </h2>
 
-                <h3>So why has the palm oil industry thrived in the past decade?</h3>
-                <p>
-                    Surprisingly, half of the world's population rely on palm oil as a part of their diet. Thus, as the global
-                    population grows, so will the demand for palm oil. Furthermore, many companies globally are not legally
-                    required to label palm oil as an ingredient. Instead, it is often labelled under other terms such as
-                    ‘vegetable oil’ or ‘vegetable fat’, causing a lot of consumers to be unaware of how frequently they are
-                    purchasing products with palm oil.
-                </p>
+        </section>
+        <section class="card wide noBg">
+            <div id="pieWrapperL">
+                <h3>Oil palm is a tropical plant species often found in countries around the equator as it thrives on
+                    high rainfall,
+                    humid conditions and sunlight. Thus, it can be found in many countries across Africa, South America
+                    and
+                    Southeast Asia.<br><br> However, the global production of palm oil is dominated by Indonesia which
+                    produced
+                    58.99% of
+                    the world’s palm oil in 2020.</h3>
+            </div>
+
+
+            <div id="production-pie-chart"></div>
+
+
+        </section>
+
+        <section class="cardCol chloro">
+
+            <h2> To meet increasing global demand, deforestation is needed to pave the way for palm oil production
+                facilities. </h2>
+            <p id="chloroText">The
+                severity of changes in forest area globally are shown below.
+
+                <br><br>As you can see, deforestation in Indonesia
+                is higher than
+                other countries with a <strong>loss of 400,000 hectares per year.</strong> Furthermore, a study done by
+                the IUCN showed
+                that at least 50%
+                of all deforestation between 2005 and 2015 on Borneo, an island that belongs primarily to Indonesia and
+                Malaysia, was
+                related to palm oil development. <br><br>Despite a moratorium in 2011 prohibiting the conversion of
+                primary
+                natural forests and
+                peatlands for commodity farming, rates of deforestation in Indonesia have fluctuated greatly, with
+                loopholes in the law
+                allowing for deforestation of secondary forests, which serve as habitats for many endemic animals.
+                <br><br>Thus, the production of palm oil is directly causing an impact on habitat loss within the
+                rainforests of
+                Indonesia, consequently pushing orangutans closer to extinction.
+
+            </p>
+
+            <section class="doubleGraph">
+                <div id="expD"></div>
+                <div id="production-chloro"></div>
+            </section>
+
+        </section>
+
+        <section class="cardCol wide">
+            <p>
+
+                All these unsustainable production practices reiterate the need for government intervention and
+                regulation to protect the habitat loss. <br><br>Though the Indonesian government is central in the
+                protection of
+                their orangutans, the global community also has a responsibility to discourage unsustainable practices,
+                and place pressure on companies and governments to act. <br><br>As Indonesia is one of the world’s
+                largest
+                exporters of deforestation, it is clear that the global demand for its product is one of the main causes
+                for deforestation. As such, reiterating the role global consumers contribute to the destruction of the
+                homes of vulnerable orangutans.
+
+            </p>
+
+        </section>
+        <section class="cardCol chloro">
+
+            <h2>This is not a call to boycott all palm oil. This is a call to shop sustainably to save our orangutans.
+            </h2>
+            <p id="chloroText">
+                Although the deforestation caused by palm oil has resulted in detrimental habitat losses, it is
+                important we do not
+                disregard the benefits of palm oil production or call for boycotts of the product. Instead it would be
+                more beneficial
+                to cultivate and encourage sustainable practices as this could actually improve the environment.
+                <br><br> <strong>Of all the vegetable
+                    oils available, palm oil is considerably the most efficient oil both in terms of yield to land use
+                    ratio. </strong>
+                For example, as shown below, soybeans have the largest land use of all the vegetable oils, but the yield
+                is less than a fifth of palm oil's.
+                <br><br>
+                If we
+                discourage the use of palm oil and consumers have to switch to other forms of vegetable oils, we risk
+                increasing the
+                rate of deforestation and consequently speeding up the demise of the orangutans. Palm oil is an
+                efficient oil, but what is hurting our planet is the unsustainable ways some farmers are going about
+                growing the crop, and how we, as consumers, are unknowingly buying their byproducts.
+
+            </p>
+
+            <section class="doubleGraph">
+                <div id="yield-bar-chart"></div>
+                <div id="harvest-treemap"></div>
+            </section>
+
+        </section>
+
+        <section class="cardCol wide">
+            <p>
+            <h3>With the chances of decreasing the orangutan population decreasing by 25% over the next three years, and
+                a projected
+                decrease of more than 80% in the next decade, it is imperative we take action now.</h3>
+
+            <p>Organisations such as RSPO are crucial in the transformation of the palm oil industry towards a more
+                sustainable
+                future. We should be actively supporting these efforts and as global citizens, be more conscious of the
+                origins of
+                our purchases.<br><br>Furthermore, there are several foundations that are active in conservation efforts
+                of orangutans in Indonesia. For
+                example, the orangutan foundation, which is also active in replenishing forest areas to ensure the
+                welfare of the
+                orangutan’s habitat.<br><br>To reiterate, as consumers, the best thing we can do is purchase foods and
+                products with sustainably produced palm
+                oil. It is important to remember that boycotting is not the answer, demanding more action in
+                conservation efforts
+                and sustainable practices are.<br><br><strong>If we do not take action now, experts estimate that
+                    orangutans could possibly go extinct within a decade. Are we
+                    really willing to stand by and let this species die out due to our greed and disregard for the
+                    natural world?</p></strong>
+
+            </p>
 
         </section>
 
 
-    </section>
-
-
-    <section class="fun-fact">
-        <h2>    To put the growth of palm oil production into perspective, in 1970, the world produced 2 million tonnes of palm oil. By
-            2020, half a century later, 75.88 million tonnes of palm oil was produced. This represents an increase of 36.9 times the
-            amount recorded in 1970.</h2>
-        <p>
-        
-        </p>
-
-    </section>
-
-</section>
-
-    </section>
-
-
-
-
-
-
-
-
-
-
-    <section id="pieCard">
-        <div id="production-pie-chart"></div>
-        <article id="pieText">
-
-
-        </article>
 
 
     </section>
-
-    <article id="introCard">
-        <article id="introText">
-            <h2>Approximately 61.5% of original orangutan habitats will be destroyed by 2025.</h2>
-
-
-        </article>
 
 
     </article>
@@ -148,13 +241,9 @@
 
 
 
-    <div id="yield-bar-chart"></div>
-    <div id="harvest-treemap"></div>
+
     <div id="deforestation-map"></div>
-    <section id="doubleChloro">
-        <div id="expD"></div>
-        <div id="production-chloro"></div>
-    </section>
+
 
     <div id="combinedPlots"></div>
 
