--- a/index.html
+++ b/index.html
@@ -90,18 +90,36 @@
                 population grows, so will the demand for palm oil. Furthermore, many companies globally are not legally
                 required to label palm oil as an ingredient. Instead, it is often labelled under other terms such as
                 ‘vegetable oil’ or ‘vegetable fat’, causing a lot of consumers to be unaware of how frequently they are
-                purchasing products with palm oil.
+                purchasing products with palm oil. '
+
+                Furthermore, palm oil is found in many different products, including, <a
+                    href="https://www.worldwildlife.org/pages/which-everyday-products-contain-palm-oil">lipsticks,
+                    chocolate and ice cream!</a>
             </p>
+            <div class="images">
+                <figure>
+                    <img src="assets/saif71-com-ypedT9JgDbQ-unsplash.jpg">
+                    <figcaption>Palm oil is often found in lipsticks,</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets\phil-aicken-xATMkkPIL24-unsplash.jpg">
+                    <figcaption>in cereals,</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets\erik-mclean-ifbVa1gYDnA-unsplash.jpg">
+                    <figcaption>in chips, and more.</figcaption>
+                </figure>
+            </div>
 
             <h3 style="margin-top: 10px"> <!--small edit so I didn't make a class or use css selector-->
                 To put the growth of palm oil production into perspective, in 1970, the world produced 2 million tonnes
                 of
                 palm oil. By
-                2020, half a century later, 75.88 million tonnes of palm oil was produced.</h3>
-            <h2>This represents an increase of
+                2020, half a century later, 75.88 million tonnes of palm oil was produced.<br><br>This represents an
+                increase of
                 36.9 times the
                 amount recorded in 1970.
-            </h2>
+            </h3>
 
         </section>
         <section class="card wide noBg">
@@ -156,25 +174,26 @@
         </section>
 
         <section class="cardCol wide">
-            <p>
+            
 
-                All these unsustainable production practices reiterate the need for government intervention and
-                regulation to protect the habitat loss. <br><br>Though the Indonesian government is central in the
+                <h2>All these unsustainable production practices reiterate the need for government intervention and
+                regulation to protect the habitat loss. </h2>
+                <p>
+                Though the Indonesian government is central in the
                 protection of
                 their orangutans, the global community also has a responsibility to discourage unsustainable practices,
-                and place pressure on companies and governments to act. <br><br>As Indonesia is one of the world’s
+                and place pressure on companies and governments to act. </p><h3>As Indonesia is one of the world’s
                 largest
                 exporters of deforestation, it is clear that the global demand for its product is one of the main causes
                 for deforestation. As such, reiterating the role global consumers contribute to the destruction of the
-                homes of vulnerable orangutans.
+                homes of vulnerable orangutans.</h3>
 
-            </p>
+            
 
         </section>
         <section class="cardCol chloro">
 
-            <h2>This is not a call to boycott all palm oil. This is a call to shop sustainably to save our orangutans.
-            </h2>
+            <h2>So how can you help? Should we stop buying products with palm oil, or stop buying products with vegetable oil that isn't clearly labelled?</h2><h3>This is not a call to boycott all palm oil. This is a call to shop sustainably to save our orangutans.</h3>
             <p id="chloroText">
                 Although the deforestation caused by palm oil has resulted in detrimental habitat losses, it is
                 important we do not
@@ -183,7 +202,7 @@
                 to cultivate and encourage sustainable practices as this could actually improve the environment.
                 <br><br> <strong>Of all the vegetable
                     oils available, palm oil is considerably the most efficient oil both in terms of yield to land use
-                    ratio. </strong>
+                    ratio. </strong><br><br>
                 For example, as shown below, soybeans have the largest land use of all the vegetable oils, but the yield
                 is less than a fifth of palm oil's.
                 <br><br>
@@ -204,7 +223,6 @@
         </section>
 
         <section class="cardCol wide">
-            <p>
             <h3>With the chances of decreasing the orangutan population decreasing by 25% over the next three years, and
                 a projected
                 decrease of more than 80% in the next decade, it is imperative we take action now.</h3>
@@ -226,7 +244,23 @@
                     really willing to stand by and let this species die out due to our greed and disregard for the
                     natural world?</p></strong>
 
-            </p>
+
+        </section>
+
+
+        <section class="cardCol wide sources">
+            <h3>To learn more, check out these websites below:</h3>
+            <ul>
+                <li><a
+                        href="https://www.ran.org/palm_oil_fact_sheet/?gad=1&gclid=EAIaIQobChMIj92RyvqkgAMV8lkPAh3r3gCXEAAYASAAEgItdPD_BwE">Rainforest
+                        Action Network</a></li>
+                <li><a
+                        href="https://www.rainforest-alliance.org/in-the-field/join-us-on-the-journey-to-sustainable-palm-oil/">Rainforest
+                        Alliance</a>
+                </li>
+                <li><a
+                    href="https://www.worldwildlife.org/pages/which-everyday-products-contain-palm-oil">World Wild Life</a></li>
+            </ul>
 
         </section>
 
